# ks_rs

./: .gitignore  Cargo.toml  README.md
scripts/: 1d_convergence.sh  all_point_values.sh  extract_max_cell_density.R  make_video.sh  make_video_spatial.sh  point_values_vs_time.sh  simple_animate.plt  simple_animate_with_units.plt  space_time_plot.py  spatial_new.R  special_runs.R
scripts/many/: animate_many.py  count_outputs_since_inflammation.py  plot_many.py  plot_many_traces.py
scripts/sensitivity/: create_json_and_run.R  functions.R  run_all.bash  run_one.bash  sobol_cells_neg_and_pos.R  sobol_indices.R
scripts/special/: special_runs_spatial.R  special_runs_spatial_shiny.R  special_runs_trace.R  special_runs_trace_shiny.R
scripts/special/phase_shiny/: app.R  run.R
scripts/special/phase_shiny/res_special_trace_only/: d_m.csv
scripts/special/phase_shiny/res_special_trace_only/0/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/1/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/10/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/100/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/101/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/102/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/103/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/104/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/105/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/106/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/107/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/108/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/109/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/11/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/110/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/111/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/112/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/113/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/114/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/115/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/116/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/117/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/118/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/119/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/12/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/120/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/121/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/122/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/123/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/124/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/125/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/126/: trace.csv
scripts/special/phase_shiny/res_special_trace_only/127/: trace.csv
scripts/special/spatial_shiny/: app.R  run.R
src/: dof_handler.rs  kde.rs  keller_segel.rs  lib.rs  main.rs  mesh.rs  scheme.rs  steady_state.rs  stencil.rs  timestepping.rs  utilities.rs
src/adr/: mod.rs  one_dim.rs
src/keller_segel/: mod.rs  one_dim.rs  two_dim.rs
src/models/: chemotaxis_7_var.rs  chemotaxis_8_var.rs  chemotaxis_9_var.rs  mod.rs
(+136 files in other folders)
