[package]
name = "ks_rs"
version = "0.1.0"
authors = ["Matthew Russell <matthewjohnrussell@gmail.com>"]
edition = "2018"
default-run = "one_dim_chemotaxis_7_var"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
structopt = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[profile.release]
lto = true

[lib]
doctest = false

[[bin]]
name = "one_dim_ks"
path = "src/bin/one_dim_ks.rs"
test = false
doctest = false

[[bin]]
name = "one_dim_ks_general"
path = "src/bin/one_dim_ks_general.rs"
test = false
doctest = false

[[bin]]
name = "one_dim_chemotaxis_5_var"
path = "src/bin/one_dim_chemotaxis_5_var.rs"
test = false
doctest = false

[[bin]]
name = "one_dim_chemotaxis_7_var"
path = "src/bin/one_dim_chemotaxis_7_var.rs"
test = false
doctest = false

[[bin]]
name = "one_dim_chemotaxis_6_var"
path = "src/bin/one_dim_chemotaxis_6_var.rs"
test = false
doctest = false

[[bin]]
name = "one_dim_diffusion_dirichlet"
path = "src/bin/one_dim_diffusion_dirichlet.rs"
test = false
doctest = false

[[bin]]
name = "two_dim_ks"
path = "src/bin/two_dim_ks.rs"
test = false
doctest = false

[[bin]]
name = "one_dim_binding_pulsating_bcs"
path = "src/bin/one_dim_binding_pulsating_bcs.rs"
test = false
doctest = false

[dev-dependencies]
approx = "0.3.2"
