[package]
name = "ks_rs"
version = "0.1.0"
authors = ["Matthew Russell <matthewjohnrussell@gmail.com>"]
edition = "2018"
default-run = "one_dim_chemotaxis_7_var"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
structopt = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[profile.release]
lto = true
debug = 1

[dev-dependencies]
approx = "0.5"

[features]
default = ["experimental_optimisations", "experimental_fixes"]
experimental_optimisations = []
experimental_fixes = []
